# raspberry-pi-image-processing

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  index.html  main.cpp  main_display.cpp  main_test.cpp  main_websocket_server.cpp  utility_server.hpp  websocket_server_async.cpp
src/compression/: CMakeLists.txt
src/compression/include/: histogram.h  histogram.hpp  huffman.h  huffman.hpp  huffman_node.hpp  min_heap_node.hpp
src/compression/src/: histogram.cpp  huffman.cpp
src/compression/tests/: compression_test.cpp  histogram_test.cpp  testcompression.cpp
test/: CMakeLists.txt  simple.cpp
